# TurkishDependencyParser-CPP

./: .gitignore  CMakeLists.txt  DependencyRelation.cpp  DependencyRelation.h  ParserEvaluationScore.cpp  ParserEvaluationScore.h  README.md  StanfordDependencyRelation.cpp  StanfordDependencyRelation.h  StanfordDependencyType.h  TestDependencyParser.cpp  TurkishDependencyRelation.cpp  TurkishDependencyRelation.h  TurkishDependencyTreeBankCorpus.cpp  TurkishDependencyTreeBankCorpus.h  TurkishDependencyTreeBankSentence.cpp  TurkishDependencyTreeBankSentence.h  TurkishDependencyTreeBankWord.cpp  TurkishDependencyType.h  UniversalDependencyRelation.cpp  UniversalDependencyRelation.h  UniversalDependencyType.h  conanfile.py
Stanford/: StanfordDependencyRelation.cpp  StanfordDependencyRelation.h  StanfordDependencyType.h
Test/: StanfordDependencyRelationTest.cpp  TurkishDependencyRelationTest.cpp  TurkishDependencyTreeBankCorpusTest.cpp  UniversalDependencyRelationTest.cpp  UniversalDependencyTreeBankCorpusTest.cpp
Turkish/: TurkishDependencyRelation.cpp  TurkishDependencyTreeBankCorpus.cpp  TurkishDependencyTreeBankWord.h
Universal/: UniversalDependencyRelation.cpp  UniversalDependencyRelation.h  UniversalDependencyTreeBankCorpus.cpp  UniversalDependencyTreeBankCorpus.h  UniversalDependencyTreeBankFeatures.cpp  UniversalDependencyTreeBankFeatures.h  UniversalDependencyTreeBankSentence.cpp  UniversalDependencyTreeBankSentence.h  UniversalDependencyTreeBankWord.cpp  UniversalDependencyTreeBankWord.h  UniversalDependencyType.h
include/: Sentence.h
src/: CMakeLists.txt  DependencyRelation.cpp  DependencyRelation.h  ParserEvaluationScore.cpp  ParserEvaluationScore.h
src/Stanford/: StanfordDependencyRelation.cpp  StanfordDependencyRelation.h
src/Turkish/: TurkishDependencyRelation.cpp  TurkishDependencyRelation.h  TurkishDependencyTreeBankCorpus.cpp  TurkishDependencyTreeBankCorpus.h  TurkishDependencyTreeBankSentence.cpp  TurkishDependencyTreeBankSentence.h  (+2 more)
(+11 files in other folders)
