cmake_minimum_required(VERSION 3.12)
project(DependencyParser)

set(CMAKE_CXX_STANDARD 17)

add_library(DependencyParser TurkishDependencyType.h StanfordDependencyType.h UniversalDependencyType.h DependencyRelation.cpp DependencyRelation.h StanfordDependencyRelation.cpp StanfordDependencyRelation.h TurkishDependencyRelation.cpp TurkishDependencyRelation.h UniversalDependencyRelation.cpp UniversalDependencyRelation.h)