cmake_minimum_required(VERSION 3.12)
project(DependencyParser)

set(CMAKE_CXX_STANDARD 17)

include_directories(include)
link_directories(library)

add_library(DependencyParser TurkishDependencyType.h StanfordDependencyType.h UniversalDependencyType.h DependencyRelation.cpp DependencyRelation.h StanfordDependencyRelation.cpp StanfordDependencyRelation.h TurkishDependencyRelation.cpp TurkishDependencyRelation.h UniversalDependencyRelation.cpp UniversalDependencyRelation.h TurkishDependencyTreeBankWord.cpp TurkishDependencyTreeBankWord.h TurkishDependencyTreeBankSentence.cpp TurkishDependencyTreeBankSentence.h TurkishDependencyTreeBankCorpus.cpp TurkishDependencyTreeBankCorpus.h)
add_executable(TestDependencyParser TurkishDependencyType.h StanfordDependencyType.h UniversalDependencyType.h DependencyRelation.cpp DependencyRelation.h StanfordDependencyRelation.cpp StanfordDependencyRelation.h TurkishDependencyRelation.cpp TurkishDependencyRelation.h UniversalDependencyRelation.cpp UniversalDependencyRelation.h TurkishDependencyTreeBankWord.cpp TurkishDependencyTreeBankWord.h TurkishDependencyTreeBankSentence.cpp TurkishDependencyTreeBankSentence.h TurkishDependencyTreeBankCorpus.cpp TurkishDependencyTreeBankCorpus.h TestDependencyParser.cpp)

target_link_libraries(DependencyParser Dictionary MorphologicalAnalysis XmlParser Corpus)
target_link_libraries(TestDependencyParser Dictionary MorphologicalAnalysis XmlParser Corpus)